force-app/main/default/objects/Case_Record__c/fields/Current_Year_CFW__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CFW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year CFW</label>
    <type>Checkbox</type>
</CustomField>