force-app/main/default/objects/Case_Record__c/fields/Current_Year_CSBG_CARES__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CSBG_CARES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year CSBG - CARES</label>
    <type>Checkbox</type>
</CustomField>