force-app/main/default/objects/Case_Record__c/fields/Current_Year_CSBG_CARES_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CSBG_CARES_Allocations__c</fullName>
    <formula>if ( Current_Year_CSBG_CARES__c 

&amp;&amp;  Current_Year_CSBG_CARES_Enrollment_Date__c &lt;= Program__r.Grant_Contract_Allocations_End_Date__c

&amp;&amp; ( Current_Year_CSBG_CARES_Completion_Date__c &gt;= Program__r.Grant_Contract_Allocations_Start_Date__c || isblank (Current_Year_CSBG_CARES_Completion_Date__c ))

, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year CSBG - CARES Allocations</label>
    <type>Checkbox</type>
</CustomField>