force-app/main/default/objects/Case_Record__c/fields/Current_Year_CSBG_TJ__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CSBG_TJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year CSBG - TJ</label>
    <type>Checkbox</type>
</CustomField>