force-app/main/default/objects/Case_Record__c/fields/Current_Year_CSBG_TJ_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CSBG_TJ_Completion_Date__c</fullName>
    <label>Current Year CSBG - TJ Completion Date</label>
    <type>Date</type>
</CustomField>