force-app/main/default/objects/Case_Record__c/fields/Current_Year_DHS_FSE_T__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DHS_FSE_T__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year DHS - FSE&amp;T</label>
    <type>Checkbox</type>
</CustomField>