force-app/main/default/objects/Case_Record__c/fields/Current_Year_DHS_FSE_T_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DHS_FSE_T_Enrollment_Date__c</fullName>
    <label>Current Year DHS - FSE&amp;T Enrollment Date</label>
    <type>Date</type>
</CustomField>