force-app/main/default/objects/Case_Record__c/fields/Current_Year_DHS_S2S_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DHS_S2S_Completion_Date__c</fullName>
    <label>Current Year DHS - S2S Completion Date</label>
    <type>Date</type>
</CustomField>