force-app/main/default/objects/Case_Record__c/fields/Current_Year_DHS_SNAP_to_Success__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DHS_SNAP_to_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year DHS - SNAP to Success</label>
    <type>Checkbox</type>
</CustomField>