force-app/main/default/objects/Case_Record__c/fields/Current_Year_DHS_TANF__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DHS_TANF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year DHS - TANF</label>
    <type>Checkbox</type>
</CustomField>