force-app/main/default/objects/Case_Record__c/fields/Current_Year_LISC_CDBG__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_LISC_CDBG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year LISC CDBG</label>
    <type>Checkbox</type>
</CustomField>