force-app/main/default/objects/Case_Record__c/fields/Current_Year_LISC_CDBG_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_LISC_CDBG_Completion_Date__c</fullName>
    <label>Current Year LISC CDBG Completion Date</label>
    <type>Date</type>
</CustomField>