force-app/main/default/objects/Case_Record__c/fields/Current_Year_REDF__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_REDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Year REDF</label>
    <type>Checkbox</type>
</CustomField>