force-app/main/default/objects/Case_Record__c/fields/Currently_fighting_any_open_case__c.field-meta.xml
<CustomField>
    <fullName>Currently_fighting_any_open_case__c</fullName>
    <label>Currently Fighting Any Open Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>