force-app/main/default/objects/Case_Record__c/fields/Currently_on_Probation__c.field-meta.xml
<CustomField>
    <fullName>Currently_on_Probation__c</fullName>
    <inlineHelpText>Are you currently on probation?</inlineHelpText>
    <label>Currently on Probation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>