force-app/main/default/objects/Case_Record__c/fields/Date_Achieved_Traction__c.field-meta.xml
<CustomField>
    <fullName>Date_Achieved_Traction__c</fullName>
    <formula>IF(
    Week_2_Started__c = 1,
    CASE(
        Program_Site_Track__c,
        &quot;CVI&quot;, Program_Start_Date__c + 7,
        &quot;INVC: Co-Location&quot;, Program_Start_Date__c + 21,
        Program_Start_Date__c + 14
    ),
    NULL
)






/*
IF( Program_Start_Date__c &gt;= DATE( 2022, 11, 18 ) &amp;&amp; Week_2_Started__c = 1, TODAY(), NULL)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Achieved Traction</label>
    <type>Date</type>
</CustomField>