force-app/main/default/objects/Case_Record__c/fields/Date_Allowed_to_Return_After_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Allowed_to_Return_After_Inactivated__c</fullName>
    <inlineHelpText>If not allowed to return, leave blank</inlineHelpText>
    <label>Date Allowed to Return After Inactivated</label>
    <type>Date</type>
</CustomField>