force-app/main/default/objects/Case_Record__c/fields/Date_Deposited_Savings_Open_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_Deposited_Savings_Open_Check__c</fullName>
    <inlineHelpText>Date check cleared.</inlineHelpText>
    <label>Date Deposited, Savings Open Check</label>
    <type>Date</type>
</CustomField>