force-app/main/default/objects/Case_Record__c/fields/Date_of_Code_of_Conduct_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Code_of_Conduct_Meeting__c</fullName>
    <description>Removed from Case Record layout in Feb 2019. Figure out where to move data.</description>
    <label>x Date of Code of Conduct Meeting</label>
    <type>Date</type>
</CustomField>