force-app/main/default/objects/Case_Record__c/fields/Date_of_First_Group_Class_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Group_Class_Assignment__c</fullName>
    <label>Date of First Group/Class Assignment</label>
    <summarizedField>GroupClass_Assignment__c.Start_Date__c</summarizedField>
    <summaryForeignKey>GroupClass_Assignment__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>