force-app/main/default/objects/Case_Record__c/fields/Date_of_First_Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Service_Entry__c</fullName>
    <label>Date of First Service Entry</label>
    <summarizedField>Client_Session__c.Date__c</summarizedField>
    <summaryForeignKey>Client_Session__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>