force-app/main/default/objects/Case_Record__c/fields/Date_of_Last_Concern__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Concern__c</fullName>
    <label>Date of Most Recent Concern</label>
    <type>Date</type>
</CustomField>