force-app/main/default/objects/Case_Record__c/fields/Date_of_Last_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Conviction__c</fullName>
    <label>Date of Last Conviction</label>
    <summarizedField>Transaction_Line_Item__c.Conviction_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction_Line_Item__c.Conviction_Type__c</field>
        <operation>equals</operation>
        <value>Misdemeanor, Felony, Placeholder</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction_Line_Item__c.Conviction_Sealed_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction_Line_Item__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>