force-app/main/default/objects/Case_Record__c/fields/Date_of_Most_Recent_Cara_Day__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Cara_Day__c</fullName>
    <label>Date of Most Recent Cara Day</label>
    <type>Date</type>
</CustomField>