force-app/main/default/objects/Case_Record__c/fields/Date_of_Most_Recent_COAT__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_COAT__c</fullName>
    <description>Rollup Helper</description>
    <label>Date of Most Recent COAT</label>
    <type>Date</type>
</CustomField>