force-app/main/default/objects/Case_Record__c/fields/Date_of_Most_Recent_Prgm_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Prgm_Stage_Change__c</fullName>
    <label>Date of Most Recent Prgm Stage Change</label>
    <type>Date</type>
</CustomField>