force-app/main/default/objects/Case_Record__c/fields/Date_of_Most_Recent_Send_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Send_Out__c</fullName>
    <label>Date of Most Recent Send Out</label>
    <summarizedField>Placement__c.Send_Out_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Placement__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>General Send Out / Employment</value>
    </summaryFilterItems>
    <summaryForeignKey>Placement__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>