force-app/main/default/objects/Case_Record__c/fields/Date_of_Most_Recent_Write_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Write_Up__c</fullName>
    <label>Date of Most Recent Write-Up</label>
    <summarizedField>Incident__c.Effective_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Incident__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Write-Up</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Incident__c.Issued_During__c</field>
        <operation>equals</operation>
        <value>Program, Cleanslate Internship, Connects Assignment</value>
    </summaryFilterItems>
    <summaryForeignKey>Incident__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>