force-app/main/default/objects/Case_Record__c/fields/Date_of_Next_Direct_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Direct_Service__c</fullName>
    <label>Date of Next Direct Service</label>
    <type>Date</type>
</CustomField>