force-app/main/default/objects/Case_Record__c/fields/Date_on_Check_Savings_Open__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Check_Savings_Open__c</fullName>
    <inlineHelpText>Date check was cut.</inlineHelpText>
    <label>Date on Check, Savings Open</label>
    <type>Date</type>
</CustomField>