force-app/main/default/objects/Case_Record__c/fields/Date_One_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>Date_One_Month_Ago__c</fullName>
    <description>Referenced in Transit Card Distribution lookup filter criteria.</description>
    <formula>today() - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date One Month Ago</label>
    <type>Date</type>
</CustomField>