force-app/main/default/objects/Case_Record__c/fields/Date_Prgm_Stage_to_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_Prgm_Stage_to_Accepted__c</fullName>
    <inlineHelpText>Date when the Program Stage was changed to Accepted.</inlineHelpText>
    <label>Date Prgm Stage to Accepted</label>
    <type>Date</type>
</CustomField>