force-app/main/default/objects/Case_Record__c/fields/Date_Prgm_Stage_to_Advanced_Training__c.field-meta.xml
<CustomField>
    <fullName>Date_Prgm_Stage_to_Advanced_Training__c</fullName>
    <inlineHelpText>Date when the Program Stage was changed to Advanced Training.</inlineHelpText>
    <label>Date Prgm Stage to Advanced Training</label>
    <type>Date</type>
</CustomField>