force-app/main/default/objects/Case_Record__c/fields/Date_Prgm_Stage_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Date_Prgm_Stage_to_Applicant__c</fullName>
    <inlineHelpText>Date when the Program Stage was changed to Applicant.</inlineHelpText>
    <label>Date Prgm Stage to Applicant/Resource O</label>
    <type>Date</type>
</CustomField>