force-app/main/default/objects/Case_Record__c/fields/Date_Prgm_Stage_to_Core_Training__c.field-meta.xml
<CustomField>
    <fullName>Date_Prgm_Stage_to_Core_Training__c</fullName>
    <inlineHelpText>Date when the Program Stage was changed to Core Training</inlineHelpText>
    <label>Date Prgm Stage to Core/Leadership Dev</label>
    <type>Date</type>
</CustomField>