force-app/main/default/objects/Case_Record__c/fields/Date_Prgm_Stage_to_Referred__c.field-meta.xml
<CustomField>
    <fullName>Date_Prgm_Stage_to_Referred__c</fullName>
    <inlineHelpText>Date when the Program Stage was changed to Referred,</inlineHelpText>
    <label>Date Prgm Stage to Referred</label>
    <type>Date</type>
</CustomField>