force-app/main/default/objects/Case_Record__c/fields/Date_Prgm_Stage_to_Retention_Services__c.field-meta.xml
<CustomField>
    <fullName>Date_Prgm_Stage_to_Retention_Services__c</fullName>
    <label>Date Prgm Stage to Retention Services</label>
    <summarizedField>Placement__c.Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Placement__c.Placement_Number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Placement__c.Job_Type__c</field>
        <operation>equals</operation>
        <value>External Transitional, Permanent, Temporary-Permanent, Long-Term</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Placement__c.Retention_Exception__c</field>
        <operation>notEqual</operation>
        <value>Previously Retained, Retention Tracked Under Previous Placement</value>
    </summaryFilterItems>
    <summaryForeignKey>Placement__c.Case_Record__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>