force-app/main/default/objects/Case_Record__c/fields/Date_Requested_Savings_Open_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested_Savings_Open_Check__c</fullName>
    <label>Date Requested, Savings Open Check</label>
    <type>Date</type>
</CustomField>