force-app/main/default/objects/Case_Record__c/fields/Days_From_Closure__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Closure__c</fullName>
    <description>Originally Exponent field, &apos;Days From Closure&apos;. Did not change API name, as not to disturb unit tests.</description>
    <formula>if (contains (ECM_Placement_Sequence__c, &quot;Internship&quot;), TRUE, FALSE)</formula>
    <label>Employment Participation</label>
    <type>Checkbox</type>
</CustomField>