force-app/main/default/objects/Case_Record__c/fields/Days_in_House__c.field-meta.xml
<CustomField>
    <fullName>Days_in_House__c</fullName>
    <formula>if (ispickval(Program_Stage__c, &quot;Referred&quot;) || ispickval(Program_Stage__c, &quot;Applicant&quot;) || ispickval(Program_Stage__c, &quot;Accepted&quot;), 0, 

IF(ISBLANK(Program_Start_Date__c) ,0, 

IF(Program_Start_Date__c &gt; TODAY(), 0, 

if (Inactive_Date__c &lt; Program_Start_Date__c, 0, 

if ((ISPICKVAL( Program_Stage__c , &quot;Retention&quot;) || ISPICKVAL( Program_Stage__c , &quot;Retention&quot;) || ISPICKVAL( Program_Stage__c , &quot;Advancement Services&quot;)) &amp;&amp; not (isblank (Date_Prgm_Stage_to_Retention_Services__c)), (Date_Prgm_Stage_to_Retention_Services__c - Program_Start_Date__c), 

if (not (isblank (Inactive_Date__c)), (Inactive_Date__c - Program_Start_Date__c), 

(TODAY() - Program_Start_Date__c)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days in House</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>