force-app/main/default/objects/Case_Record__c/fields/Days_in_House_Grants_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Days_in_House_Grants_Contracts__c</fullName>
    <formula>if (ispickval(Program_Stage__c, &quot;Referred&quot;) || ispickval(Program_Stage__c, &quot;Applicant&quot;) || ispickval(Program_Stage__c, &quot;Accepted&quot;), 0, 

IF(ISBLANK(Program_Start_Date__c) ,0, 

IF(Program_Start_Date__c &gt; TODAY(), 0, 

if (Inactive_Date__c &lt; Program_Start_Date__c, 0, 

if (not (isblank (Class_End_Date__c)) &amp;&amp; Class_End_Date__c &lt; Program__r.Grant_Contract_Report_Cutoff__c, Class_End_Date__c - Program_Start_Date__c, 

(Program__r.Grant_Contract_Report_Cutoff__c - Program_Start_Date__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days in House (Grants/Contracts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>