force-app/main/default/objects/Case_Record__c/fields/Days_in_Program__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Program__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Program_Stage__c, &quot;Referred&quot;),
    ISPICKVAL(Program_Stage__c, &quot;Applicant&quot;),
    ISPICKVAL(Program_Stage__c, &quot;Resource Only&quot;),
    ISBLANK(Program_Start_Date__c),
    Program_Start_Date__c &gt; TODAY(),
    Inactive_Date__c &lt; Program_Start_Date__c
  ),
0,
  IF( NOT( ISBLANK(Inactive_Date__c)),
  Inactive_Date__c - Program_Start_Date__c + 1,
  TODAY() - Program_Start_Date__c + 1
  )
)

/*
if (ispickval(Program_Stage__c, &quot;Referred&quot;) || ispickval(Program_Stage__c, &quot;Applicant&quot;) || ispickval(Program_Stage__c, &quot;Resource Only&quot;), 0,

IF(ISBLANK(Program_Start_Date__c) ,0,

IF(Program_Start_Date__c &gt; TODAY(), 0,

if (Inactive_Date__c &lt; Program_Start_Date__c, 0,

if (not (isblank (Inactive_Date__c)), Inactive_Date__c - Program_Start_Date__c,

(TODAY() - Program_Start_Date__c))))))
*/</formula>
    <label># Days in Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>