force-app/main/default/objects/Case_Record__c/fields/Days_on_Staffing_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Staffing_Assignments__c</fullName>
    <description>Rollup Helper. Updated nightly.</description>
    <inlineHelpText>Excludes Cleanslate.</inlineHelpText>
    <label># Days on Connects Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>