force-app/main/default/objects/Case_Record__c/fields/Days_Since_Last_Support_Channeling__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Support_Channeling__c</fullName>
    <formula>today() -  Date_of_Most_Recent_Support_Channeling__c</formula>
    <label># Days Since Last Support Channeling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>