force-app/main/default/objects/Case_Record__c/fields/Days_Since_Send_Out_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Send_Out_Eligible__c</fullName>
    <formula>if (isblank (Send_Out_Eligible_Date__c), NULL, 
today() - Send_Out_Eligible_Date__c)</formula>
    <label># Days Since Send Out Eligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>