force-app/main/default/objects/Case_Record__c/fields/Days_to_First_Job__c.field-meta.xml
<CustomField>
    <fullName>Days_to_First_Job__c</fullName>
    <formula>if (isblank (Start_Date_of_First_Job__c), NULL,

Start_Date_of_First_Job__c - Program_Start_Date__c)</formula>
    <label># Days to First Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>