force-app/main/default/objects/Case_Record__c/fields/Days_to_SOE__c.field-meta.xml
<CustomField>
    <fullName>Days_to_SOE__c</fullName>
    <formula>if (isblank (Send_Out_Eligible_Date__c), NULL,

Send_Out_Eligible_Date__c - Program_Start_Date__c)</formula>
    <label># Days to SOE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>