force-app/main/default/objects/Case_Record__c/fields/Default_Face_Sheet_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Default_Face_Sheet_Configuration__c</fullName>
    <formula>Program__r.Default_Face_Sheet_Configuration__c</formula>
    <label>Default Face Sheet Configuration</label>
    <type>Text</type>
</CustomField>