force-app/main/default/objects/Case_Record__c/fields/DHS_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case_Number__c</fullName>
    <label>DHS Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>