force-app/main/default/objects/Case_Record__c/fields/DHS_Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>DHS_Eligibility_Date__c</fullName>
    <label>DHS Eligibility Date</label>
    <type>Date</type>
</CustomField>