force-app/main/default/objects/Case_Record__c/fields/Do_you_have_any_warrants__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_warrants__c</fullName>
    <label>Do You Have Any Warrants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>