force-app/main/default/objects/Case_Record__c/fields/Domestic_Violence_Survivor__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Violence_Survivor__c</fullName>
    <label>Experienced Domestic Violence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>