force-app/main/default/objects/Case_Record__c/fields/Dress_Code_SOE_Date__c.field-meta.xml
<CustomField>
    <fullName>Dress_Code_SOE_Date__c</fullName>
    <label>Dress Code SOE Date</label>
    <type>Date</type>
</CustomField>