force-app/main/default/objects/Case_Record__c/fields/Driver_s_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License_Status__c</fullName>
    <label>Driver&apos;s License Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Has Valid DL</fullName>
            </value>
            <value>
                <fullName>No Valid DL, Can Obtain</fullName>
            </value>
            <value>
                <fullName>No Valid DL, Cannot Obtain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>