force-app/main/default/objects/Case_Record__c/fields/Driving_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Driving_Narrative__c</fullName>
    <description>Field created in Feb 2019 as part of participant data cleanup.</description>
    <inlineHelpText>Input information regarding driver’s license history, license revoked, driving fines, and DL2 access.</inlineHelpText>
    <label>Driving Narrative</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>